[package]
name = "taproot-dlc"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_wallet = "1.0.0"
bitcoin = "0.32.5"
dlc = "0.7.1"
dlc-trie = "0.7.1"
hex = "0.4.3"
kormir = "0.4.1"
lightning = "0.0.125"
rand = "0.8.5"
schnorr_fun = { version = "0.10.0", features = ["libsecp_compat"] }
secp256k1-zkp = "0.11.0"
serde_json = "1.0.133"
sha2 = "0.10.8"
thiserror = "2.0.8"
ddk = { path = "../dlcdevkit/ddk" }
dlc-messages = "0.7.1"
