[package]
name = "taproot-dlc"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_wallet = "1.0.0"
bitcoin = "0.32.5"
dlc = "0.7.1"
dlc-trie = "0.7.1"
hex = "0.4.3"
kormir = "0.4.1"
lightning = "0.0.125"
rand = "0.8.5"
schnorr_fun = { version = "0.10.0", features = ["libsecp_compat"] }
secp256k1-zkp = "0.11.0"
serde_json = "1.0.133"
sha2 = "0.10.8"
thiserror = "2.0.8"
dlc-messages = "0.7.1"
ddk-manager = "0.7.3"
ddk = "0.0.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bitcoincore-rpc-json = "0.19.0"
bitcoincore-rpc = "0.19.0"
bdk_esplora = "0.20.1"
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "taproot-dlc"
path = "bin/main.rs"
